# mcp_device_management

./: .cursorignore  .cursorrules  .env.example  .gitignore  DEVELOPMENT_GUIDE.md  MCP_IMPLEMENTATION_README.md  MCP_STARTUP.md  QUICKSTART.md  README.md  env.template  mcp_stdio_server.py  pyproject.toml  run_mcp_server.py  test_mcp_client.py
.github/: copilot-instructions.md
Devices/Android/: README.md
Devices/Android/emulator-5554/: device.json
Devices/IOS/: README.md
Devices/Windows/: README.md
config/: settings.yaml
docs/: AZURE_DEVOPS_INTEGRATION_SUMMARY.md  FASTMCP_FIX_SUMMARY.md  MCP_API.md  MCP_BORROW_RETURN_INTEGRATION.md  MCP_CURSOR_INTEGRATION.md  MCP_STREAMABLE_HTTP_README.md  SSE_MCP_CURSOR_INTEGRATION.md  TOOLS_PROMPTS_MAPPING.md  device_template.json  study.md
scripts/: activate.bat  monitor_cursor.bat  run_dev.bat  run_fastmcp_server.bat  run_mcp_server.bat  run_mcp_server2.bat  run_mcp_server2.py  run_mcp_stdio.bat  run_mcp_streamable_http.bat  run_official_mcp_server.bat  run_official_mcp_server.py  run_tests.bat  setup.bat  test_fastmcp_client.bat
src/: __init__.py  main.py
src/az_info/: README.md  az_util.py  deliverable_handler.py  main.py  record_in_deliverable.py
src/device/: README.md  __init__.py  android_reader.py  api_demo.py  api_usage_demo.py  ios_reader.py  manager.py  models.py  other_reader.py  records_reader.py  test_all_readers.py  windows_reader.py
src/handlers/: __init__.py  api.py
src/mcp/: __init__.py  protocol.py  server.py  streamable_http_server.py  test_client.py
src/mcp_server/: README.md  __init__.py  fastmcp_test_server.py  test_device_mangement_server.py  test_fastmcp_client.py
src/mcp_server2/: __init__.py  __main__.py  event_store.py  mcp_server2.py  server.py
tests/: test_device_manager.py
